# vapoursynth-tivtc-api4

./: .gitignore  README.md  hatch_build.py  pyproject.toml
.github/workflows/: build-msys2.yml
src/: PluginInit.cpp  TCommonASM.cpp  TCommonASM.h  TDecimate.cpp  TDecimate.h  TDecimateASM.cpp  TDecimateASM.h  TDecimateBlur.cpp  TDecimateMode2.cpp  TDecimateMode7.cpp  TDecimateOut.cpp  TFM.cpp  TFM.h  TFMD2V.cpp  TFMPP.cpp  TFMPP.h  TFMPlanar.cpp  calcCRC.cpp  calcCRC.h
tools/: check_package_layout.py  ci_build_msys2.py  ci_prepare_msys2.py  package_plugin_zip.py  pkg_config_shim.py  smoke_installed_wheel.py  smoke_load_artifact.py
