[build-system]
requires = ["hatchling>=1.30", "packaging>=24.0", "meson>=0.49", "ninja"]
build-backend = "hatchling.build"

[project]
name = "vapoursynth-tivtc"
version = "3.5"
description = "TIVTC field matching and decimation plugin for VapourSynth"
readme = "README.md"
license = { text = "GPL-2.0-or-later" }
requires-python = ">=3.12"
authors = [{ name = "TIVTC contributors" }]
dependencies = ["VapourSynth>=77"]

[project.urls]
"Source Code" = "https://github.com/RyougiKukoc/vapoursynth-tivtc-api4"
"Releases" = "https://github.com/RyougiKukoc/vapoursynth-tivtc-api4/releases"

[tool.hatch.build.targets.sdist]
include = [
  "hatch_build.py",
  "meson.build",
  "pyproject.toml",
  "README.md",
  "src",
  "tools",
]

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins"]
artifacts = [
  "vapoursynth/plugins/**/*.dll",
  "vapoursynth/plugins/**/manifest.vs",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
